fixed searchbox layout issue with firefox, safari and chrome

--- a/css/nc_style.css
+++ b/css/nc_style.css
@@ -81,6 +81,11 @@ a:hover {
 	color:#000000;
 	text-decoration:underline;
 	}
+	
+img {
+	border:none;
+}
+
 
 /*Header
 ----------------------------------------------------*/
@@ -167,7 +172,7 @@ footer {
 
 #search {
 	float:left;
-	width:450px;
+	width:485px;
 	height:200px;
 	margin-top:0px;
 	position:absolute;
@@ -175,6 +180,7 @@ footer {
 	background-image:url("../images/search_soft_edge.png");
 	background-position:right;
 	background-repeat:repeat-y;
+	background-color:red;
 	}
 
 .searchbox {
@@ -183,6 +189,7 @@ footer {
 	font-family:georgia, times, serif;
 	color:#999999;
 	font-size:18px;
+	width:380px;
 	}
 
 .subM_bttn {
